# Programming-Training-Project

./: README.md  TTPFrontEnd.exe.lnk  TrainTicketBackEnd.exe.lnk  可行性分析与概要设计报告 .md  可行性分析与概要设计报告.md
Request/: 可行性分析报告.md  方案 (1).docx  方案模块参考.docx  火车票务管理系统可行性分析报告.docx  火车票务管理系统概要设计报告.docx
Request/软件过程文档/: PPT要求-简要要求.docx  项目总结报告.docx
TTPBack-End/: CMakeLists.txt  README.md
TTPBack-End/data/: orders.csv  stations.csv  trains.csv  users.csv
TTPBack-End/logs/: run-20260707-162237.txt  run-20260707-163043.txt  run-20260707-163817.txt  run-20260707-164445.txt  run-20260707-164507.txt  run-20260707-164924.txt  run-20260707-165513.txt  run-20260707-194303.txt  run-20260707-213529.txt  run-20260707-213602.txt  run-20260707-213953.txt  run-20260707-214621.txt  run-20260707-214728.txt  run-20260707-214819.txt  run-20260707-215022.txt  run-20260708-100529.txt  run-20260708-100709.txt  run-20260708-101825.txt  run-20260708-101924.txt  run-20260708-104233.txt  run-20260708-104330.txt  run-20260708-104801.txt  run-20260708-104804.txt  run-20260708-104834.txt  run-20260708-104947.txt  run-20260708-112152.txt  run-20260708-112316.txt  run-20260708-112450.txt  run-20260708-112643.txt  run-20260708-112810.txt  run-20260708-144919.txt  run-20260708-145038.txt  run-20260708-145657.txt  run-20260708-145754.txt  run-20260708-150205.txt  run-20260708-150255.txt  run-20260708-150351.txt  run-20260708-150655.txt  run-20260708-150821.txt  run-20260708-151609.txt  (+45 more)
TTPBack-End/ssr/: Logger.cpp  Logger.h  main.cpp
TTPBack-End/ssr/ApiService/: ApiService.cpp  ApiService.h
TTPBack-End/ssr/ApiService/methods/: Delete.cpp  Get.cpp  Post.cpp  Push.cpp  Put.cpp
TTPBack-End/ssr/TicketService/: TicketService.cpp  TicketService.h
TTPBack-End/ssr/TicketService/modules/: Admin.cpp  Auth.cpp  Graph.cpp  Json.cpp  Order.cpp  Query.cpp  Refund.cpp  Route.cpp
TTPFront-end/: App.xaml  App.xaml.cs  Readme-Of-Front-end.md  TTPFrontEnd.csproj  TTPFrontEnd.slnx
TTPFront-end/Converters/: BoolToVisibilityConverter.cs  StringToVisibilityConverter.cs
TTPFront-end/Models/: ApiResponse.cs  StationInfo.cs  TicketModels.cs  TrainInfo.cs
TTPFront-end/Utils/: HttpLogger.cs  Logger.cs  WindowHelper.cs
TTPFront-end/ViewModels/: AdminPanelViewModel.cs  BookingViewModel.cs  ChangeTicketViewModel.cs  LoginViewModel.cs  MainViewModel.cs  OrderListViewModel.cs  ProfileViewModel.cs  RefundViewModel.cs  RegisterViewModel.cs  StationEditViewModel.cs  TrainDetailViewModel.cs  TrainEditViewModel.cs  TrainQueryViewModel.cs
standard guide/: API-TODO.md  API规范文档.md  后端接口清单.md
(+18 files in other folders)
